src/test/resources/model_test/valid/FourEntities_model/Person.entity
Person {
//	id : integer {@Id}; // the id
	id : int {@Id}; // the id
	firstName : string {@SizeMax( 3)} ;
	lastName : string;
	birthDate : date ;
	country : Country[]; 
	gender : Gender;
}
