src/test/resources/model_test/invalid/FourEntities_model/Person.entity
Person {
	id : int {@Id}; // the id
	firstName : string { @SizeMax(xx) } ;
	lastName : string { @Min } ;
	birthDate : date { @DefaultValue } ;
	country : Country[ 999]; 
	gender : Gender { @NotNull @NotNull } ;
}
